covered the GTE custom LDS deployer configuration settings into the roxy settings

--- a/roxy/deploy/local.properties
+++ b/roxy/deploy/local.properties
@@ -26,6 +26,10 @@ app-role=${app-name}-role
 # The ports used by your application
 #
 app-port=9679
+
+#
+# the xcc server is used for push the content
+#
 xcc-port=9678
 
 ## Security
