made so changes to the this files to make sure it works after a bootstrap and deploy.

--- a/roxy/deploy/local.properties
+++ b/roxy/deploy/local.properties
@@ -13,7 +13,7 @@ password=admin
 # Your Application's name
 #
 app-name=ml-taxonomies
-modules-root=/
+modules-root=/xquery/
 modules-prefix=/
 
 # The role that is given permissions and execute privileges
@@ -44,8 +44,8 @@ default-user=${app-name}-user
 #
 #url-rewriter=/roxy/rewrite.xqy
 url-rewriter=rewriter.xqy
-error-handler=
 #error-handler=/roxy/error.xqy
+error-handler=
 rewrite-resolves-globally=
 
 # Environments recognized by Roxy
