move all the user logic into the user function file started on the login page. created some more user log in functions

--- a/roxy/deploy/local.properties
+++ b/roxy/deploy/local.properties
@@ -37,7 +37,7 @@ xcc-port=9678
 # The authentication used for your appserver
 #
 authentication-method=application-level
-default-user=${app-name}-user
+default-user=${app-name}-public
 
 #
 # The default values point to Roxy file
